objects/Field_Observation__c.object
<CustomObject>
    <fields>
        <fullName>Description_of_Observation__c</fullName>
        <description>A simple text field to allow agents to create simple observations</description>
        <label>Description of Observation</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Predictions__c</fullName>
        <label>Predictions</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Reporter_Email__c</fullName>
        <label>Reporter Email</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <description>A custom Object for field agents to initiate deviations and complaints.</description>
    <label>Field Observation</label>
    <nameField>
        <label>Field Observation Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Field Observations</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <recordTypes>
        <fullName>New_Field_Observation</fullName>
        <active>true</active>
        <label>New Field Observation</label>
    </recordTypes>
</CustomObject>